--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,10 @@
     "@tanstack/react-router": "^0.0.1-beta.82",
     "axios": "^1.3.4",
     "jotai": "^2.0.2",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.10",
     "@types/react-query": "^1.2.9",
     "@vitejs/plugin-react": "^3.1.0",
